--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,6 +81,7 @@ input, select, textarea {
     border-radius: 50%;
     object-fit: cover; 
     display: block;
+	margin-bottom: 40px;
     border: 3px solid #fff; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
 }
